--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -8,7 +8,9 @@
 				</a>
     <hr/>
   </div>
+  <div class="user-profile">
   <app-header></app-header>
+  </div>
   <div class="sidebar-menu">
     <nav class="navigation">
       <ul class="mainmenu">
