--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,4 +1,15 @@
-<h3>Manage Clients</h3>
+
+<!-- Heading -->
+<div class="card mb-4 wow fadeIn">
+  <!--Card content-->
+  <div class="card-body d-sm-flex justify-content-between">
+      <h4 class="mb-2 mb-sm-0 pt-1">
+          <span>Manage Clients</span>
+      </h4>
+  </div>
+</div>
+<!-- Heading -->
+
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
@@ -8,11 +19,12 @@
 <div class="row">
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header" style="padding-left:5px;">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control underlined" placeholder="search" (input)="onSearchChange($event.target.value)" />
+      <div class="card-header grey lighten-3" style="padding-left:5px;">
+        <div class="md-form input-group mb-3">
+          <input type="text" class="form-control" id="search" (input)="onSearchChange($event.target.value)" />
+          <label for="search">Search</label>
           <div class="input-group-append">
-            <button class="btn btn-primary" (click)="new()">
+            <button class="btn primary-color waves-effect m-0" (click)="new()">
               <i class="fa fa-plus-square"></i> &nbsp;Add New</button>
           </div>
         </div>
@@ -36,23 +48,27 @@
       <div class="card-body">
         <form (ngSubmit)="submit()" name="clientForm" ngNativeValidate>
           Client Id:{{client.id}}
-          <div class="form-group">
             <div class="row">
               <div class="col-md-4">
+              <div class="md-form">
                 <label for="name">Name *</label>
                 <input type="text" class="form-control underlined" name="name" id="name" required="true" [(ngModel)]="client.name" pattern=".{3,}"
                   title="3 characters minimum" />
                 <small>minimum 3 character</small>
               </div>
-              <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+              <div class="md-form">
                 <label for="contactPerson">Contact Person *</label>
                 <input type="text" class="form-control underlined" name="contactPerson" id="contactPerson" required="true" [(ngModel)]="client.contactPerson"
                   pattern=".{3,}" title="3 characters minimum" />
                 <small>minimum 3 character</small>
               </div>
+              </div>
               <div class="col-md-4">
+              <div class=" md-form">
                 <label for="companyType">Company Type *</label>
-                <select id="companyType" name="companyType" class="form-control underlined" required="true" [(ngModel)]="client.companyType">
+                <select id="companyType" name="companyType" class="form-control browser-default custom-select" required="true" [(ngModel)]="client.companyType">
                   <option value="Company" selected>Company</option>
                   <option value="Partnership">Partnership</option>
                   <option value="Individual">Individual</option>
@@ -62,28 +78,27 @@
               </div>
             </div>
           </div>
-          <div class="form-group">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="phonePrimary">Primary Phone *</label>
                 <input type="tel" class="form-control underlined" pattern=".{10,12}" title="min 10, max 12 characters" name="phonePrimary"
                   id="phonePrimary" required="true" [(ngModel)]="client.phonePrimary" />
                 <small>min 10, max 12 characters</small>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="email">Primary Email *</label>
                 <input type="email" class="form-control underlined" name="email" id="email" required="true" [(ngModel)]="client.email" />
               </div>
             </div>
-          </div>
+
           <div class="form-group">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="name">Secondary Phone</label>
                 <input type="tel" class="form-control underlined" name="phoneSecondary" id="phoneSecondary" required="false" [(ngModel)]="client.phoneSecondary"
                 />
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="faxNo">Fax</label>
                 <input type="tel" class="form-control underlined" name="faxNo" id="faxNo" required="false" [(ngModel)]="client.faxNo" />
               </div>
@@ -91,14 +106,14 @@
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="pan">PAN *</label>
                 <input type="text" class="form-control underlined" name="pan" id="pan" pattern=".{10,}" title="min 10 characters" required="true"
                   [(ngModel)]="client.pan" />
                 <small>min 10 characters</small>
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="gstin">GSTIN *</label>
                 <input type="text" class="form-control underlined" name="gstin" id="gstin" pattern=".{15,20}" title="min 15,max 20 characters"
                   required="true" [(ngModel)]="client.gstin" />
@@ -109,14 +124,14 @@
           <div class="form-group">
             <label for="bill_Addr">Billing Address *</label>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
 
                 <label for="addrLine1">Address line 1 *</label>
                 <input type="text" class="form-control underlined" name="addrLine1" pattern=".{3,}" title="min 3 characters" id="addrLine1"
                   required="true" [(ngModel)]="client.addrLine1" />
                 <small>min 3 characters</small>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="addrLine2">Address line 2 </label>
                 <input type="text" class="form-control underlined" name="addrLine2" id="addrLine2" required="false" [(ngModel)]="client.addrLine2"
                 />
@@ -126,19 +141,19 @@
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 md-form">
                 <label for="city">City *</label>
                 <input type="text" class="form-control underlined" name="city" pattern=".{3,}" title="min 3 characters" id="city" required="true"
                   [(ngModel)]="client.city" />
                 <small>min 3 characters</small>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 md-form">
                 <label for="state">State *</label>
                 <input type="text" class="form-control underlined" name="state" pattern=".{2,}" title="min 2 characters" id="state" required="true"
                   [(ngModel)]="client.state" />
                 <small>min 2 characters</small>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 md-form">
                 <label for="pinCode">PinCode *</label>
                 <input type="text" class="form-control underlined" pattern=".{6,6}" title="min 6,max 6 characters" name="pincode" id="pincode"
                   required="true" [(ngModel)]="client.pincode" />
@@ -151,13 +166,13 @@
             <br/>
             <label for="ship_Addr">Shipping Address</label>
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="shipToAddrLine1">Address line 1 *</label>
                 <input type="text" class="form-control underlined" name="shipToAddrLine1" pattern=".{3,}" title="min 3 characters" id="shipToAddrLine1"
                   required="true" [(ngModel)]="client.shipToAddrLine1" />
                 <small>min 3 characters</small>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="shipToAddrLine2">Address line 2 </label>
                 <input type="text" class="form-control underlined" name="shipToAddrLine2" id="shipToAddrLine2" required="false" [(ngModel)]="client.shipToAddrLine2"
                 />
@@ -167,19 +182,19 @@
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 md-form">
                 <label for="shipToAddrCity">City *</label>
                 <input type="text" class="form-control underlined" name="shipToAddrCity" pattern=".{3,}" title="min 3 characters" id="shipToAddrCity"
                   required="true" [(ngModel)]="client.shipToAddrCity" />
                 <small>min 3 characters</small>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 md-form">
                 <label for="shipToAddrState">State *</label>
                 <input type="text" class="form-control underlined" name="shipToAddrState" pattern=".{2,}" title="min 2 characters" id="shipToAddrState"
                   required="true" [(ngModel)]="client.shipToAddrState" />
                 <small>min 2 characters</small>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 md-form">
                 <label for="shipToAddrPincode">PinCode *</label>
                 <input type="text" class="form-control underlined" pattern=".{6,6}" title="min 6,max 6 characters" name="shipToAddrPincode"
                   id="shipToAddrPincode" required="true" [(ngModel)]="client.shipToAddrPincode" />
@@ -189,7 +204,7 @@
           </div>
           <div class="form-group">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6 md-form">
                 <label for="ServiceTaxRegNo">Service Tax Reg No</label>
                 <input type="text" class="form-control underlined" pattern=".{15,20}" title="min 15,max 20 characters" name="ServiceTaxRegNo"
                   id="ServiceTaxRegNo" required="false" [(ngModel)]="client.serviceTaxRegNo" />
