--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -1,10 +1,22 @@
-<div class="card">
-  <div class="alert alert-danger" role="alert" *ngIf="error">
-    {{errorMessage}}
+<!-- Heading -->
+<div class="card mb-4 wow fadeIn">
+  <!--Card content-->
+  <div class="card-body d-sm-flex justify-content-between">
+      <h4 class="mb-2 mb-sm-0 pt-1">
+          <span>Edit Company</span>
+      </h4>
   </div>
-  <div class="alert alert-success" role="alert" *ngIf="success">
-    Successfully Saved
-  </div>
+</div>
+<!-- Heading -->
+
+<div class="alert alert-danger" role="alert" *ngIf="error">
+  {{errorMessage}}
+</div>
+<div class="alert alert-success" role="alert" *ngIf="success">
+  Successfully Saved
+</div>
+
+<div class="card">  
 
   <div class="card-header" style="padding-left:20px;">
     <label for="companyName">Company Name : </label>
