--- a/src/app/manufacturing-invoice/invoice.manu.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.component.html
@@ -1,4 +1,14 @@
-<h3>PerformA Invoice (Manufacturing)</h3>
+
+<!-- Heading -->
+<div class="card mb-4 wow fadeIn">
+  <!--Card content-->
+  <div class="card-body d-sm-flex justify-content-between">
+      <h4 class="mb-2 mb-sm-0 pt-1">
+          <span>PerformA Invoice (Manufacturing)</span>
+      </h4>
+  </div>
+</div>
+<!-- Heading -->
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
