--- a/src/app/manufacturing-invoice/manufacturing-gen-invoice.component.html
+++ b/src/app/manufacturing-invoice/manufacturing-gen-invoice.component.html
@@ -1,4 +1,13 @@
-<h3>Invoice (Manufacturing)</h3>
+<!-- Heading -->
+<div class="card mb-4 wow fadeIn">
+  <!--Card content-->
+  <div class="card-body d-sm-flex justify-content-between">
+      <h4 class="mb-2 mb-sm-0 pt-1">
+          <span>Invoice (Manufacturing)</span>
+      </h4>
+  </div>
+</div>
+<!-- Heading -->
 
 <div class="card" *ngIf="manufacturingInvoice.id">
   <div class="card-body">
