--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -1,14 +1,24 @@
+<!-- Heading -->
+<div class="card mb-4 wow fadeIn">
+  <!--Card content-->
+  <div class="card-body d-sm-flex justify-content-between">
+      <h4 class="mb-2 mb-sm-0 pt-1">
+          <span>New Voucher</span>
+      </h4>
+  </div>
+</div>
+<!-- Heading -->
+<div class="alert alert-danger" role="alert" *ngIf="error">
+  {{errorMessage}}
+</div>
+<div class="alert alert-success" role="alert" *ngIf="success">
+  Successfully Saved
+</div>
+
 <div class="card">
-  <div class="alert alert-danger" role="alert" *ngIf="error">
-    {{errorMessage}}
-  </div>
-  <div class="alert alert-success" role="alert" *ngIf="success">
-    Successfully Saved
-  </div>
 
   <div class="card-header" style="padding-left:20px;">
     <label for="vendorName">Voucher Entry </label>
-
   </div>
 
   <div class="card-body">
