--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -12,6 +12,7 @@
 }
 .user-profile{
 	background:white;
+	border:white 1px solid;
 }
 .sidebar-fixed .list-group .active {
 	-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0
@@ -27,7 +28,7 @@
 }
 
 .sidebar-fixed .logo-container {
-	border-bottom: #0d47a1 1px solid;
+	border-bottom:white 1px solid;
 	margin-bottom: 2px;
 }
 
