--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,4 @@
-<div class="show-sidebar" id="show-sidebar">
-  <a><i class="fa fa-bars"></i></a>
-</div>
-<div class="sidebar-fixed position-fixed primary-color-dark ">
+<div class="sidebar-fixed position-fixed primary-color-dark" *ngIf="show">
   <div class="white logo-container">
     <a class="logo-wrapper waves-effect">
 					<img src="/img/seyon-web-240x70.png" class="img-fluid" alt="">
