--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,9 +2,9 @@
 <div class="card mb-4 wow fadeIn">
   <!--Card content-->
   <div class="card-body d-sm-flex justify-content-between">
-      <h4 class="mb-2 mb-sm-0 pt-1">
-          <span>Manage User</span>
-      </h4>
+    <h4 class="mb-2 mb-sm-0 pt-1">
+      <span>Manage User</span>
+    </h4>
   </div>
 </div>
 <!-- Heading -->
@@ -17,17 +17,24 @@
 <div class="row">
   <div class="col-md-4">
     <div class="card">
-      <div class="card-header" style="padding-left:5px;">
-        <div class="input-group mb-3">
-          <input type="text" class="form-control underlined" placeholder="search" />
+      <div class="card-header grey lighten-4" >
+        <div class="md-form input-group mb-3">
+          <label for="search">Search</label>
+          <input type="text" class="form-control" id="search" />
           <div class="input-group-append">
-            <button class="btn btn-primary" (click)="new()">Add New</button>
+            <button class="btn primary-color waves-effect m-0" (click)="new()">
+               <i class="fa fa-plus-square"></i> &nbsp;Add New</button>
           </div>
         </div>
       </div>
       <div style="overflow:auto;height:400px;background-color:white;">
         <ul class="list-group list-group-flush">
-          <li *ngFor="let user of users" class="list-group-item" (click)="edit(user)">{{user.name}}</li>
+          <li *ngFor="let user of users" class="list-group-item" (click)="edit(user)" style="cursor: pointer;">
+            {{user.name}}
+            <span class="float-right">
+              <i class="fa fa-arrow-right"></i>
+            </span>
+          </li>
         </ul>
         <div>
         </div>
@@ -35,74 +42,82 @@
     </div>
   </div>
   <div class="col-md-8">
-    <div class="card">
-      <div class="card-body">
-        <form (ngSubmit)="submit()" name="userForm" ngNativeValidate>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-md-4">
-                <label for="name">User Name</label>
+    <form (ngSubmit)="submit()" name="userForm" ngNativeValidate>
+      <div class="card">
+        <div class="card-header primary-color white-text" >
+          <h5> User </h5>
+        </div>
+        <div class="card-body">
+
+          <div class="row">
+            <div class="col-md-6 border-right">
+              <h4 class="sub-header">
+                <span class="index">1</span>User
+              </h4>
+              <div class="md-form">
+                <label for="name" [class.active]="user.name!=''">User Name</label>
                 <input type="text" class="form-control underlined" name="name" id="name" required="true" [(ngModel)]="user.name" />
               </div>
-              <div class="col-md-4">
-                <label for="email">Email</label>
+
+              <div class="md-form">
+                <label for="email" [class.active]="user.email!=''">Email</label>
                 <input type="text" class="form-control underlined" name="email" id="email" required="true" [(ngModel)]="user.email" />
               </div>
-              <div class="col-md-4">
-                <label for="active">Active</label>
-                <select id="active" name="active " class="form-control underlined" required="true" [(ngModel)]="user.active">
+              <div class="md-form">
+                <label for="active" [class.active]="user.active!=''">Active</label>
+                <select id="active" name="active " class="browser-default custom-select md-select" required="true" [(ngModel)]="user.active">
                   <option value="true" selected>Active </option>
                   <option value="false">InActive </option>
                 </select>
               </div>
+              <h5 class="sub-header">
+                <span class="index">2</span>Password:
+              </h5>
+              <div class="md-form">
+                <label for="password" [class.active]="user.password!=''">Password</label>
+                <input type="password" class="form-control underlined" name="password" id="password" required="true" [(ngModel)]="user.password">
+              </div>
+              <div class="md-form">
+                <label for="retype_password" [class.active]="user.password!=''">reenter password</label>
+                <input type="password" class="form-control underlined" name="retype_password" id="retype_password" required="">
+              </div>
+
             </div>
-            <br>
-            <div *ngIf="showRoles">
-                <b>User Roles:</b>
-              <div class="row">
-                <div class="col-md-4">
-                  <select id="RoleSelect" name="roleSelect " class="form-control underlined" [(ngModel)]="userRole.roleCode">
+            <div class="col-md-6">
+              <h4 class="sub-header">
+                <span class="index">3</span>User Role
+              </h4>
+              <div *ngIf="showRoles">
+                <div class="md-form input-group">
+                  <select id="RoleSelect" name="roleSelect " class="browser-default custom-select md-select" [(ngModel)]="userRole.roleCode">
                     <option value="ADMIN" selected>ADMIN</option>
                     <option value="USER">USER</option>
                     <option value="CLIENT">CLIENT</option>
                   </select>
+                  <div class="input-group-append">
+                    <button type="button" name="addRole" (click)="adduserRole(userRole.roleCode)" class="btn btn-success btn-sm waves-effect m-0">
+                      <i class="fa fa-plus-square"></i>&nbsp;Add Role</button>
+                  </div>
                 </div>
-                <div class="col-md-4">
-                  <button type="button" name="addRole" (click)="adduserRole(userRole.roleCode)" class="btn btn-success">Add Role</button>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-4">
-                  <ul class="list-group list-group-flush">
-                    <li *ngFor="let userRole of userRoles" class="list-group-item" style="cursor: pointer;">
-                      {{userRole.roleCode}}
-                      <span class="float-right">
+                <ul class="list-group list-group-flush">
+                  <li *ngFor="let userRole of userRoles" class="list-group-item" style="cursor: pointer;">
+                    {{userRole.roleCode}}
+                    <span class="float-right">
                         <i (click)="deleteUserRole(userRole.id)" class="fa fa-trash"></i>
                       </span>
-                    </li>
-                  </ul>
-                </div>
+                  </li>
+                </ul>
               </div>
             </div>
-            <hr/>
-            <div class="row">
-              <br/>
-              <div class="col-md-2">
-                <label for="password">Password</label>
-              </div>
-              <div class="col-md-5">
-                <input type="password" class="form-control underlined" name="password" id="password" placeholder="Enter password" required="true"
-                  [(ngModel)]="user.password"> </div>
-              <div class="col-md-5">
-                <input type="password" class="form-control underlined" name="retype_password" id="retype_password" placeholder="Re-type password"
-                  required=""> </div>
-
-            </div>
-
           </div>
-          <button type="submit" class="btn btn-success float-right">Save</button>
-        </form>
+
+        </div>
+
+        <div class="card-footer">
+          <button type="submit" class="btn btn-success float-right waves-effect m-0">
+                <i class="fa fa-save"></i>&nbsp;Save</button>
+        </div>
       </div>
-    </div>
+    </form>
   </div>
 </div>
