--- a/src/app/voucher/voucher.component.html
+++ b/src/app/voucher/voucher.component.html
@@ -2,9 +2,9 @@
 <div class="card mb-4 wow fadeIn">
   <!--Card content-->
   <div class="card-body d-sm-flex justify-content-between">
-      <h4 class="mb-2 mb-sm-0 pt-1">
-          <span>New Voucher</span>
-      </h4>
+    <h4 class="mb-2 mb-sm-0 pt-1">
+      <span>New Voucher</span>
+    </h4>
   </div>
 </div>
 <!-- Heading -->
@@ -15,56 +15,59 @@
   Successfully Saved
 </div>
 
-<div class="card">
-
-  <div class="card-header" style="padding-left:20px;">
-    <label for="vendorName">Voucher Entry </label>
-  </div>
-
-  <div class="card-body">
-    <form (ngSubmit)="saveVoucher()" name="voucherForm" ngNativeValidate>
-
+<form (ngSubmit)="saveVoucher()" name="voucherForm" ngNativeValidate>
+  <div class="card">
+    <div class="card-header primary-color white-text" style="padding-left:20px;">
+      <label for="vendorName">Voucher Entry </label>
+    </div>
+    <div class="card-body">
       <div class="form-group">
         <div class="row">
           <div class="col-sm-4">
+            <div class="md-form mt-1">
             <label for="vendorName">Vendor Name : </label>
-            <input type="text" class="form-control underlined" name="vendorName" id="vendorName" placeholder="Enter vendorName" [(ngModel)]="voucher.vendorName"
-            />
+            <input type="text" class="form-control underlined" name="vendorName" id="vendorName" [(ngModel)]="voucher.vendorName" />
           </div>
-
+          </div>
           <div class="col-sm-4">
+            <div class="md-form mt-1">
             <label for="voucherId">Voucher Id </label>
-            <input type="text" class="form-control underlined" name="voucherId" id="voucherId" placeholder="Enter voucherId" [(ngModel)]="voucher.voucherId"
-            />
+            <input type="text" class="form-control underlined" name="voucherId" id="voucherId" [(ngModel)]="voucher.voucherId"/>
+            </div>
           </div>
         </div>
       </div>
       <div class="form-group">
         <div class="row">
           <div class="col-sm-4">
+            <div class="md-form mt-1">
             <label for="particulars">Particulars : </label>
-            <input type="text" class="form-control underlined" name="particulars" id="particulars" placeholder="Enter particulars" [(ngModel)]="voucher.particulars"
-            />
+            <input type="text" class="form-control underlined" name="particulars" id="particulars"  [(ngModel)]="voucher.particulars"/>
+            </div>
           </div>
         </div>
       </div>
-       <div class="form-group">
+      <div class="form-group">
         <div class="row">
           <div class="col-sm-4">
+            <div class="md-form mt-1">
             <label for="totalAmount">Total Amount : </label>
-            <input type="text" class="form-control underlined" name="totalAmount" id="totalAmount" placeholder="Enter totalAmount" [(ngModel)]="voucher.totalAmount"
-            />
+            <input type="text" class="form-control underlined" name="totalAmount" id="totalAmount"  [(ngModel)]="voucher.totalAmount"/>
+            </div>
           </div>
-
           <div class="col-sm-4">
-            <label for="voucherDate">Voucher Date </label>
-            <input type="date" class="form-control underlined" name="voucherDate" id="voucherDate" placeholder="Enter voucherDate" [(ngModel)]="voucher.voucherDate"
+            <div class="md-form mt-1">
+            <label for="voucherDate" class="active">Voucher Date </label>
+            <input type="date" class="form-control underlined" name="voucherDate" id="voucherDate" [(ngModel)]="voucher.voucherDate"
             />
+            </div>
           </div>
         </div>
       </div>
-
-      <button class="btn btn-success pull-right" type="submit">Save</button>
-    </form>
+      
+    </div>
+    <div class="card-footer">
+      <button class="btn btn-success float-right " type="submit"> <i class="fa fa-save"></i>&nbsp;Save</button>
+    </div>
   </div>
-</div>
+</form>
