--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -1,4 +1,15 @@
-<h3>Proforma Invoice (Service)</h3>
+<!-- Heading -->
+<div class="card mb-4 wow fadeIn">
+  <!--Card content-->
+  <div class="card-body d-sm-flex justify-content-between">
+    <h4 class="mb-2 mb-sm-0 pt-1">
+      <span>Proforma Invoice (Service)</span>
+    </h4>
+  </div>
+</div>
+<!-- Heading -->
+
+
 <div class="alert alert-danger" role="alert" *ngIf="error">
   {{errorMessage}}
 </div>
@@ -78,7 +89,7 @@
         </td>
       </tr>
         <tr>
-          <td colspan="6">
+          <td colspan="7">
           </td>
           <th>
             Enter Reimbursement Amount
@@ -87,7 +98,7 @@
         </tr>
       <tfoot>
         <tr>
-          <td colspan="6">
+          <td colspan="7">
           </td>
           <th>
             SUM =
@@ -95,7 +106,7 @@
           <td>{{invoice.totalPerfomaBeforeTax}}</td>
         </tr>
         <tr *ngIf="cgstDisplay">
-          <td colspan="5">
+          <td colspan="6">
           </td>
           <th style="text-align: right">
             CGST =
@@ -104,7 +115,7 @@
           <td>{{invoice.cgstPerfoma}}</td>
         </tr>
         <tr *ngIf="sgstDisplay">
-          <td colspan="5">
+          <td colspan="6">
           </td>
           <th style="text-align: right">
             SGST =
@@ -113,7 +124,7 @@
           <td>{{invoice.sgstPerfoma}}</td>
         </tr>
         <tr *ngIf="igstDisplay">
-          <td colspan="5">
+          <td colspan="6">
           </td>
           <th style="text-align: right">
             IGST =
@@ -123,7 +134,7 @@
         </tr>
       
         <tr>
-          <td colspan="6">
+          <td colspan="7">
           </td>
           <th>
             Total =
