adding role access and making GST changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,6 +3,7 @@
         <img src="https://www.w3schools.com/w3css/img_avatar3.png" class="img-responsive" alt="">
       </div>
       <div class="profile-usertitle">
+        <small>Logged in as :</small>
         <div class="profile-usertitle-name">
           {{user.name}}  |
           <a href="#" title="edit profile">
