--- a/src/app/manufacturing-invoice/invoice.manu.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.component.html
@@ -64,10 +64,10 @@
       </tr>
       <tr>
         <th colspan="4">Description</th>
-        <th>SAC Code</th>
+        <th *ngIf="showSac">SAC Code</th>
         <th>Quantity</th>
         <th>Rate</th>
-        <th>gst</th>
+        <th *ngIf="showSac">gst</th>
         <th>Amount</th>
       </tr>
       <tr *ngFor="let field of manufacturingInvoice;let i=index">
@@ -78,7 +78,7 @@
           <textarea type="text" class="form-control" required="true" [(ngModel)]="field.itemDescription" (change)="calculateAmount(field)">
           </textarea>
         </td>
-        <td WIDTH="10%">
+        <td WIDTH="10%" *ngIf="showSac">
           <select (change)="loadSelectedSac(field)" class="form-control underlined" [(ngModel)]="field.sacCodeId">
         <option></option>
         <option *ngFor="let sac of sacCodes" [ngValue]="sac.id" [selected]="sac.id === field.sacCodeId">{{sac.sacCode}}</option>
@@ -91,7 +91,7 @@
         <td WIDTH="10%"><input type="number" class="form-control" required="false" min="0" [(ngModel)]="field.performaRate" (change)="calculateAmount(field)"
           />
         </td>
-        <td WIDTH="10%">
+        <td WIDTH="10%" *ngIf="showSac">
           <p *ngIf="field.cgstPerfomaPercent>0">cgst={{field.cgstPerfomaPercent}}%, :{{field.cgstPerfoma}}</p>
           <p *ngIf="field.sgstPerfomaPercent>0">sgst={{field.sgstPerfomaPercent}}%, :{{field.cgstPerfoma}}</p>
           <p *ngIf="field.igstPerfomaPercent>0">igst={{field.igstPerfomaPercent}}%, :{{field.cgstPerfoma}}</p>
