--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -102,13 +102,13 @@
                 <label for="pan" [class.active]="client.pan!=''">PAN *</label>
                 <input type="text" class="form-control underlined" name="pan" id="pan" pattern="[A-Za-z]{5}\d{4}[A-Za-z]{1}" title="min 10 characters" required="true"
                   [(ngModel)]="client.pan" />
-                <small>min 10 characters</small>
+                <small>AAAAA1111A</small>
               </div>
               <div class="md-form ">
-                <label for="gstin" [class.active]="client.gstin!=''">GSTIN </label>
+                <label for="gstin" [class.active]="client.gstin!=''">GSTIN * </label>
                 <input type="text" class="form-control underlined" name="gstin" id="gstin" pattern="^([0]{1}[1-9]{1}|[1-2]{1}[0-9]{1}|[3]{1}[0-7]{1})([a-zA-Z]{5}[0-9]{4}[a-zA-Z]{1}[1-9a-zA-Z]{1}[zZ]{1}[0-9a-zA-Z]{1})+$" title="min 15,max 20 characters"
-                  required="false" [(ngModel)]="client.gstin" />
-                <small>min 15,Max 20 characters</small>
+                  required="true" [(ngModel)]="client.gstin" />
+                <small>sample : 24AAACB5343E1Z7</small>
               </div>
               <div class="md-form ">
                 <label for="ServiceTaxRegNo" [class.active]="client.serviceTaxRegNo!=''">Service Tax Reg No</label>
@@ -150,7 +150,7 @@
                   required="true" [(ngModel)]="client.pincode" />
                 <small>6 characters</small>
               </div>
-              <h5 class="sub-header">
+              <!-- <h5 class="sub-header">
                 <span class="index">3</span>Shipping Address
               </h5>
               <div class="custom-control custom-checkbox mb-2">
@@ -187,7 +187,7 @@
                 <input type="text" class="form-control underlined" pattern=".{6,6}" title="min 6,max 6 characters" name="shipToAddrPincode"
                   id="shipToAddrPincode" required="true" [(ngModel)]="client.shipToAddrPincode" />
                 <small>6 characters</small>
-              </div>
+              </div> -->
               
 
             </div>
