manu facturing invoide fixes

--- a/src/app/manufacturing-invoice/invoice.manu.component.html
+++ b/src/app/manufacturing-invoice/invoice.manu.component.html
@@ -66,7 +66,7 @@
         </div>
     <table class="table">
       <tr>
-        <th colspan="4">Description</th>
+        <th colspan="4" WIDTH="50%">Description</th>
         <th *ngIf="showSac">SAC Code</th>
         <th>Quantity</th>
         <th>Rate</th>
